# upload

./: DOCUMENTATION_GUIDE.md  MULTI_AGENT_SYSTEM.md  README.md  RULES.md  SESSION_SUMMARY.md  SRS.md  TERMINAL_FIX.md  TESTING_COMPLETE.md  TEST_ANALYSIS.md  USAGE_AND_PROCEDURES.md  agents(1).md  features.md  govinfo_cli.py  govinfo_sql_ingest.py  project_summary.md  tasks.md
apps/: README.md
apps/cloudcurio-tui/: README.md  cloudcurio_tui_main.go  main.go
apps/docbrain/: README.md  docbrain.py
apps/url2md-toolkit/: README.md  requirements.txt  url_to_markdown_openrouter.py
docs/ai/: How are agentic programming systems designed and e.md  madd_agents_docs.md  multiagent-patterns.md
docs/personal/: blaine_winslow_resume_parseable.md  conversation_notes.md
infrastructure/: README.md
personal/chatgpt-archive/: README.md
projects/: README.md  sysledger_go_prototype.go
projects/cbw-master/: README.md  cbw_multiagent_launcher.sh  pyproject.toml
projects/multi-agent/: README.md  multi_agent_ts_orchestrator.ts
projects/multi-agent/cbw_multiagent_project/: README.md  cbw_multiagent_launcher.sh  pyproject.toml  requirements.txt
projects/retail-sleuth/: Makefile  README.md  docker-compose.yml
scripts/setup/: cbw_ssh_key_trade(1).sh  repo_bootstrap.py  yadm_secrets_toolkit.sh
tools/: README.md
tools/ai-automation/: lang_installer_framework_usage.md
tools/automation/: Python System Performance Monitor  automated_code_review.yaml
tools/gemini-cli/: GEMINI.md  README.md  gemini_cli_blueprint_v_2.py  gemini_cli_instructions.md  (+1 more)
(+105 files in other folders)
