[project]
name = "cbw-multiagent-project"
version = "0.1.0"
description = "CBW multi-agent research, analysis, and self-healing orchestration (OpenAI-style agents + CrewAI bridge)."
authors = [
  { name = "cbwinslow", email = "blaine.winslow@gmail.com" },
  { name = "ChatGPT", email = "noreply@example.com" }
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "crewai>=0.70",
  "crewai-tools>=0.30",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false
